Fix : "Index 페이지 내 Follow Peaople에서 Follow 버튼 오류 수정"
Follow 버튼을 누를때 id="btncheck1"로 고정되어 있는 문제 수정

Fixes : #15

--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -80,8 +80,8 @@
                                                 <p class="fw-bold text-dark m-0">{{name}}</p>
                                                 <p class="small text-muted">{{profession}}</p>
                                                 <div class="btn-group" role="group" aria-label="Basic checkbox toggle button group">
-                                                    <input type="checkbox" class="btn-check" id="btncheck1" checked>
-                                                    <label class="btn btn-outline-primary btn-sm px-3 rounded-pill" for="btncheck1"><span class="follow">+ Follow</span><span class="following d-none">Following</span></label>
+                                                    <input type="checkbox" class="btn-check" id="btncheck{{id}}" checked>
+                                                    <label class="btn btn-outline-primary btn-sm px-3 rounded-pill" for="btncheck{{id}}"><span class="follow">+ Follow</span><span class="following d-none">Following</span></label>
                                                 </div>
                                             </div>
                                         </div>
