--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -91,19 +91,20 @@
                                 <!-- Feeds -->
                                 <div class="pt-4 feeds">
                                     <!-- Feed Item -->
+                                    {{#postList}}
                                     <div class="bg-white p-3 feed-item rounded-4 mb-3 shadow-sm">
                                         <div class="d-flex">
-                                            <img src="img/rmate2.jpg" class="img-fluid rounded-circle user-img" alt="profile-img">
+                                            <img src="{{user.imageUrl}}" class="img-fluid rounded-circle user-img" alt="profile-img">
                                             <div class="d-flex ms-3 align-items-start w-100">
                                                 <div class="w-100">
                                                     <div class="d-flex align-items-center justify-content-between">
                                                         <a href="profile.html" class="text-decoration-none d-flex align-items-center">
-                                                            <h6 class="fw-bold mb-0 text-body">Shay Jordon</h6>
+                                                            <h6 class="fw-bold mb-0 text-body">{{user.name}}</h6>
                                                             <span class="ms-2 material-icons bg-primary p-0 md-16 fw-bold text-white rounded-circle ov-icon">done</span>
-                                                            <small class="text-muted ms-2">@shay-jordon</small>
+                                                            <small class="text-muted ms-2">{{user.nickname}}</small>
                                                         </a>
                                                         <div class="d-flex align-items-center small">
-                                                            <p class="text-muted mb-0">19 Feb</p>
+                                                            <p class="text-muted mb-0">{{createdAt}}</p>
                                                             <div class="dropdown">
                                                                 <a href="#" class="text-muted text-decoration-none material-icons ms-2 md-20 rounded-circle bg-light p-1" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">more_vert</a>
                                                                 <ul class="dropdown-menu fs-13 dropdown-menu-end" aria-labelledby="dropdownMenuButton1">
@@ -116,24 +117,21 @@
                                                         </div>
                                                     </div>
                                                     <div class="my-2">
-                                                        <p class="mb-3 text-primary">Welcome to the Vogel family 🙂</p>
-                                                        <ul class="list-unstyled mb-3">
-                                                            <li>1. Follow people you like by clicking on the ’+ Follow’ button to see their posts in your feed.</li>
-                                                            <li>2. Share your thoughts with others and gain a following.</li>
-                                                        </ul>
-                                                        <p class="text-dark">Happy Vogel to you!</p>
+                                                        <p class="text-dark">{{content}}</p>
                                                         <a href="#" class="text-decoration-none" data-bs-toggle="modal" data-bs-target="#commentModal">
-                                                            <img src="img/post1.png" class="img-fluid rounded mb-3" alt="post-img">
+                                                            {{#postImageList}}
+                                                                <img src="{{.}}" class="img-fluid rounded mb-3" alt="post-img">
+                                                            {{/postImageList}}
                                                         </a>
                                                         <div class="d-flex align-items-center justify-content-between mb-2">
                                                             <div>
-                                                                <a href="#" class="text-muted text-decoration-none d-flex align-items-start fw-light"><span class="material-icons md-20 me-2">thumb_up_off_alt</span><span>30.4k</span></a>
+                                                                <a href="#" class="text-muted text-decoration-none d-flex align-items-start fw-light"><span class="material-icons md-20 me-2">thumb_up_off_alt</span><span>{{likeNum}}</span></a>
                                                             </div>
                                                             <div>
-                                                                <a href="#" class="text-muted text-decoration-none d-flex align-items-start fw-light"><span class="material-icons md-20 me-2">chat_bubble_outline</span><span>4.0k</span></a>
+                                                                <a href="#" class="text-muted text-decoration-none d-flex align-items-start fw-light"><span class="material-icons md-20 me-2">chat_bubble_outline</span><span>{{commentNum}}</span></a>
                                                             </div>
                                                             <div>
-                                                                <a href="#" class="text-muted text-decoration-none d-flex align-items-start fw-light"><span class="material-icons md-20 me-2">repeat</span><span>617</span></a>
+                                                                <a href="#" class="text-muted text-decoration-none d-flex align-items-start fw-light"><span class="material-icons md-20 me-2">repeat</span><span>{{shareNum}}</span></a>
                                                             </div>
                                                             <div>
                                                                 <a href="#" class="text-muted text-decoration-none d-flex align-items-start fw-light"><span class="material-icons md-18 me-2">share</span><span>Share</span></a>
@@ -210,6 +208,7 @@
                                             </div>
                                         </div>
                                     </div>
+                                    {{/postList}}
                                 </div>
                             </div>
                         </div>
