--- a/src/main/resources/templates/login.mustache
+++ b/src/main/resources/templates/login.mustache
@@ -4,28 +4,29 @@
       <!-- Required meta tags -->
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1">
-      <link rel="icon" type="image/png" href="img/logo.png">
+      <link rel="icon" type="image/png" href="/img/logo.png">
       <title>Vogel - Social Network & Community HTML Template</title>
       <meta name="description" content="Vogel - Social Network & Community HTML Template" />
       <meta name="keywords" content="bootstrap5, e-learning, forum, games, online course, Social Community, social events, social feed, social media, social media template, social network html, social sharing, twitter" />
       <!-- Bootstrap CSS -->
-      <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+      <link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
       <!-- Slich Slider -->
-      <link href="vendor/slick/slick/slick.css" rel="stylesheet">
-      <link href="vendor/slick/slick/slick-theme.css" rel="stylesheet">
+      <link href="/vendor/slick/slick/slick.css" rel="stylesheet">
+      <link href="/vendor/slick/slick/slick-theme.css" rel="stylesheet">
       <!-- Icofont -->
-      <link href="vendor/icofont/icofont.min.css" rel="stylesheet">
+      <link href="/vendor/icofont/icofont.min.css" rel="stylesheet">
       <!-- Font Icons -->
-      <link href="vendor/icons/css/materialdesignicons.min.css" rel="stylesheet" type="text/css">
+      <link href="/vendor/icons/css/materialdesignicons.min.css" rel="stylesheet" type="text/css">
       <!-- Custom Css -->
-      <link href="css/style.css" rel="stylesheet">
+      <link href="/css/style.css" rel="stylesheet">
       <!-- Material Icons -->
       <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
    </head>
    <body class="bg-light">
       <div class="web-none d-flex align-items-center px-3 pt-3">
-         <a href="index.html" class="text-decoration-none">
-         <img src="img/logo.png" class="img-fluid logo-mobile" alt="brand-logo">
+         <a href="/index.html" class="text-decoration-none">
+         <img src="/img/logo.png" class="img-fluid logo-mobile" alt="brand-logo">
          </a>
          <button class="ms-auto btn btn-primary ln-0" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample" aria-controls="offcanvasExample">
          <span class="material-icons">menu</span>
@@ -38,9 +39,9 @@
             <main class="col col-xl-6 order-xl-2 col-lg-12 order-lg-1 col-md-12 col-sm-12 col-12">
                <div class="main-content">
                   <div class="mb-5">
-                     <img src="img/logo.png" class="img-fluid logo" alt="brand-logo">
+                     <img src="/img/logo.png" class="img-fluid logo" alt="brand-logo">
                      <h1 class="fw-bold text-black mb-1">Login</h1>
-                     <p class="lead fw-normal text-muted mb-0">welcome to twitter</p>
+                     <p class="lead fw-normal text-muted mb-0">welcome to Vogle</p>
                   </div>
                   <!-- Feeds -->
                   <div class="feeds">
@@ -49,20 +50,20 @@
 
                         <div class="row justify-content-center">
                            <div class="col-lg-12">
-                              <form class="form-floating-space" id="contactForm" data-sb-form-api-token="API_TOKEN">
+                              <div class="form-floating-space" id="contactForm" data-sb-form-api-token="API_TOKEN">
                                  <!-- Name input-->
                                  <div class="form-floating mb-3">
-                                    <input class="form-control rounded-5" id="name" type="email" placeholder="Enter email address"/>
-                                    <label for="name">email address</label>
+                                    <input class="form-control rounded-5" id="login-account" type="text" placeholder="Enter Account"/>
+                                    <label for="login-account">account</label>
                                  </div>
                                  <!-- Phone number input-->
                                  <div class="form-floating mb-3">
-                                    <input class="form-control rounded-5" id="password" type="password" placeholder="Enter password"/>
-                                    <label for="password">password</label>
+                                    <input class="form-control rounded-5" id="login-password" type="password" placeholder="Enter password"/>
+                                    <label for="login-password">password</label>
                                  </div>
                                  <!-- Submit Button-->
-                                 <div class="d-grid"><button class="btn btn-primary w-100 rounded-5 text-decoration-none py-3 fw-bold text-uppercase m-0" id="submitButton" type="submit">Login</button></div>
-                              </form>
+                                 <div class="d-grid"><button class="btn btn-primary w-100 rounded-5 text-decoration-none py-3 fw-bold text-uppercase m-0" id="login-button" type="submit">Login</button></div>
+                              </div>
                            </div>
                         </div>
                      </div>
@@ -91,12 +92,13 @@
          </div>
       </div>
 <!-- Jquery Js -->
-      <script src="vendor/jquery/jquery.min.js"></script>
+      <script src="/vendor/jquery/jquery.min.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"></script>
       <!-- Bootstrap Bundle Js -->
-      <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+      <script src="/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
       <!-- Custom Js -->
-      <script src="js/custom.js"></script>
+      <script src="/js/user.js"></script>
       <!-- Slick Js -->
-      <script src="vendor/slick/slick/slick.min.js"></script>
+      <script src="/vendor/slick/slick/slick.min.js"></script>
    </body>
 </html>
