--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -439,7 +439,9 @@
                             </li>
                         </ul>
                     </div>
-                    <a href="#" class="btn btn-primary w-100 text-decoration-none rounded-4 py-3 fw-bold text-uppercase m-0" data-bs-toggle="modal" data-bs-target="#signModal">Sign In +</a>
+                    <a href="/user/signup" class="btn btn-primary w-100 text-decoration-none rounded-4 py-3 fw-bold text-uppercase m-0">Sign Up +</a>
+                    <div></div>
+                    <a href="/user/login" class="btn btn-primary w-100 text-decoration-none rounded-4 py-3 fw-bold text-uppercase m-0">Sign In ++</a>
                 </div>
             </aside>
             <aside class="col col-xl-3 order-xl-3 col-lg-6 order-lg-3 col-md-6 col-sm-6 col-12">
@@ -752,13 +754,14 @@
 
 <!-- Jquery Js -->
 <script src="/vendor/jquery/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"></script>
 <!-- Bootstrap Bundle Js -->
 <script src="/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 <!-- Custom Js -->
 <script src="/js/custom.js"></script>
+<script src="/js/user.js"></script>
+<script src="/js/test.js"></script>
 <!-- Slick Js -->
 <script src="/vendor/slick/slick/slick.min.js"></script>
-<!-- 내가 만든거-->
-<script src="/js/test.js"></script>
 </body>
 </html>
