--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -609,26 +609,28 @@
     <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content rounded-4 p-4 border-0 bg-light">
             <div class="modal-header d-flex align-items-center justify-content-start border-0 p-0 mb-3">
-                <a href="#" class="text-muted text-decoration-none material-icons" data-bs-dismiss="modal">arrow_back_ios_new</a>
+                <a id="postModalCancelButton" href="#" class="text-muted text-decoration-none material-icons" data-bs-dismiss="modal">arrow_back_ios_new</a>
                 <h5 class="modal-title text-muted ms-3 ln-0" id="staticBackdropLabel"><span class="material-icons md-32">account_circle</span></h5>
             </div>
-            <div class="modal-body p-0 mb-3">
-                <div class="form-floating">
-                    <textarea class="form-control rounded-5 border-0 shadow-sm" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 200px"></textarea>
-                    <label for="floatingTextarea2" class="h6 text-muted mb-0">What's on your mind...</label>
+            <form id="postUploadFrom" method="post" enctype="multipart/form-data">
+                <div class="modal-body p-0 mb-3">
+                    <div class="form-floating">
+                        <textarea id="postRegisterArea" maxlength="500" class="form-control rounded-5 border-0 shadow-sm" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 200px"></textarea>
+                        <label for="floatingTextarea2" class="h6 text-muted mb-0">What's on your mind...</label>
+                    </div>
                 </div>
-            </div>
-            <div class="modal-footer justify-content-start px-1 py-1 bg-white shadow-sm rounded-5">
-                <div class="rounded-4 m-0 px-3 py-2 d-flex align-items-center justify-content-between w-75">
-                    <a href="#" class="text-muted text-decoration-none material-icons">insert_link</a>
-                    <a href="#" class="text-muted text-decoration-none material-icons">image</a>
-                    <a href="#" class="text-muted text-decoration-none material-icons">smart_display</a>
-                    <span class="text-muted">0/500</span>
+                <div class="modal-footer justify-content-start px-1 py-1 bg-white shadow-sm rounded-5">
+                    <div class="rounded-4 m-0 px-3 py-2 d-flex align-items-center justify-content-between w-75">
+                            <input id="postImageRegister" multiple type="file" id="chooseFile" name="chooseFile" accept="image/*">
+                    </div>
+                    <div class="ms-auto m-0">
+                        <a id="postUploadButton" data-bs-dismiss="modal" href="#" class="btn btn-primary rounded-5 fw-bold px-3 py-2 fs-6 mb-0 d-flex align-items-center">
+                            <span class="material-icons me-2 md-16">send</span>
+                            Post
+                        </a>
+                    </div>
                 </div>
-                <div class="ms-auto m-0">
-                    <a data-bs-dismiss="modal" href="#" class="btn btn-primary rounded-5 fw-bold px-3 py-2 fs-6 mb-0 d-flex align-items-center"><span class="material-icons me-2 md-16">send</span>Post</a>
-                </div>
-            </div>
+            </form>
         </div>
     </div>
 </div>
@@ -760,7 +762,7 @@
 <!-- Custom Js -->
 <script src="/js/custom.js"></script>
 <script src="/js/user.js"></script>
-<script src="/js/test.js"></script>
+<script src="/js/index.js"></script>
 <!-- Slick Js -->
 <script src="/vendor/slick/slick/slick.min.js"></script>
 </body>
