--- a/src/main/resources/templates/signup.mustache
+++ b/src/main/resources/templates/signup.mustache
@@ -47,28 +47,27 @@
                       <div class="feeds">
                          <!-- Feed Item -->
                          <div class="bg-white mt-5 p-4 feed-item rounded-4 shadow-sm faq-page">
-
                             <div class="row justify-content-center">
                                <div class="col-lg-12">
-                                  <div class="form-floating-space" id="contactForm" data-sb-form-api-token="API_TOKEN">
+                                  <form class="form-floating-space" id="signup-form" data-sb-form-api-token="API_TOKEN" onsubmit="return false" method="post">
                                      <!-- Email input-->
                                      <div class="form-floating mb-3">
                                         <input class="form-control rounded-5" id="signup-account" type="text" placeholder="Enter account"/>
-                                        <label for="signup-account">email address</label>
+                                        <label for="signup-account">Account</label>
                                      </div>
                                     <!-- Password input-->
                                       <div class="form-floating mb-3">
                                         <input class="form-control rounded-5" id="signup-password" type="password" placeholder="Enter password"/>
-                                        <label for="signup-password">password</label>
+                                        <label for="signup-password">Password</label>
                                       </div>
                                      <!-- Name input-->
                                      <div class="form-floating mb-3">
                                         <input class="form-control rounded-5" id="signup-name" type="text" placeholder="Enter name"/>
-                                        <label for="signup-name">name</label>
+                                        <label for="signup-name">Name</label>
                                      </div>
                                      <!-- Submit Button-->
                                      <div class="d-grid"><button class="btn btn-primary w-100 rounded-5 text-decoration-none py-3 fw-bold text-uppercase m-0" id="signup-button" type="submit">Sign Up</button></div>
-                                  </div>
+                                  </form>
                                </div>
                             </div>
                          </div>
