Feat: "회원가입 시 닉네임도 받게 추가"
기존에는 아이디, 비밀번호, 이름만 받게 구성했는데 닉네임도 필수로 기입하도록 추가하였습니다.

Fixes: #15

--- a/src/main/resources/templates/signup.mustache
+++ b/src/main/resources/templates/signup.mustache
@@ -65,6 +65,10 @@
                                         <input class="form-control rounded-5" id="signup-name" type="text" placeholder="Enter name"/>
                                         <label for="signup-name">Name</label>
                                      </div>
+                                      <div class="form-floating mb-3">
+                                          <input class="form-control rounded-5" id="signup-nickname" type="text" placeholder="Enter nickname"/>
+                                          <label for="signup-nickname">Nickname</label>
+                                      </div>
                                      <!-- Submit Button-->
                                      <div class="d-grid"><button class="btn btn-primary w-100 rounded-5 text-decoration-none py-3 fw-bold text-uppercase m-0" id="signup-button" type="submit">Sign Up</button></div>
                                   </form>
