--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -373,31 +373,16 @@
                                 <a href="profile.html" class="nav-link"><span class="material-icons me-3">account_circle</span> <span>Profile</span></a>
                             </li>
                             <li class="nav-item">
-                                <a href="explore.html" class="nav-link"><span class="material-icons me-3">explore</span> <span>Explore</span></a>
-                            </li>
-                            <li class="nav-item">
-                                <a href="#" class="nav-link" data-bs-toggle="modal" data-bs-target="#languageModal"><span class="material-icons me-3">translate</span> <span>Language</span></a>
-                            </li>
-                            <li class="nav-item">
                                 <a href="/" class="nav-link"><span class="material-icons me-3">logout</span> <span>Logout</span></a>
-                            </li>
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" id="offcanvasNavbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                    <span class="material-icons me-3">web</span> Pages
-                                </a>
-                                <ul class="dropdown-menu px-2 py-1 mb-2" aria-labelledby="offcanvasNavbarDropdown">
-                                    <li><a class="dropdown-item rounded-3 px-2 py-1 my-1" href="contact.html">Contact</a></li>
-                                    <li><a class="dropdown-item rounded-3 px-2 py-1 my-1" href="faq.html">FAQ</a></li>
-                                    <li><a class="dropdown-item rounded-3 px-2 py-1 my-1" href="404.mustache">404 Error</a></li>
-                                    <li><a class="dropdown-item rounded-3 px-2 py-1 my-1" href="edit-profile.html">Edit Profile</a></li>
-                                </ul>
                             </li>
                             <li class="nav-item">
                                 <a href="tags.html" class="nav-link"><span class="material-icons me-3">local_fire_department</span> <span>Trending</span></a>
                             </li>
                         </ul>
                     </div>
-                    <a href="#" class="btn btn-primary w-100 text-decoration-none rounded-4 py-3 fw-bold text-uppercase m-0" data-bs-toggle="modal" data-bs-target="#signModal">Sign In +</a>
+                    <a href="#" class="btn btn-primary w-100 text-decoration-none rounded-4 py-3 fw-bold text-uppercase m-0" data-bs-toggle="modal" data-bs-target="#signModal">Sign up +</a>
+                    <div style="height: 20px"></div>
+                    <a href="/user/login" class="btn btn-primary w-100 text-decoration-none rounded-4 py-3 fw-bold text-uppercase m-0">Sign In ++</a>
                 </div>
                 <!-- Sidebar -->
                 <div class="ps-0 m-none fix-sidebar">
@@ -412,36 +397,19 @@
                                 <a href="/" class="nav-link active"><span class="material-icons me-3">house</span> <span>Feed</span></a>
                             </li>
                             <li class="nav-item">
-                                <a href="profile.html" class="nav-link"><span class="material-icons me-3">account_circle</span> <span>Profile</span></a>
+                                <a href="profile.html" class="nav-link" id="profile-menu"><span class="material-icons me-3">account_circle</span> <span>Profile</span></a>
                             </li>
                             <li class="nav-item">
-                                <a href="explore.html" class="nav-link"><span class="material-icons me-3">explore</span> <span>Explore</span></a>
+                                <a href="/" class="nav-link" id="logout-menu"><span class="material-icons me-3">logout</span> <span>Logout</span></a>
                             </li>
                             <li class="nav-item">
-                                <a href="#" class="nav-link" data-bs-toggle="modal" data-bs-target="#languageModal"><span class="material-icons me-3">translate</span> <span>Language</span></a>
-                            </li>
-                            <li class="nav-item">
-                                <a href="/" class="nav-link"><span class="material-icons me-3">logout</span> <span>Logout</span></a>
-                            </li>
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" id="offcanvasNavbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                    <span class="material-icons me-3">web</span> Pages
-                                </a>
-                                <ul class="dropdown-menu px-2 py-1 mb-2" aria-labelledby="offcanvasNavbarDropdown">
-                                    <li><a class="dropdown-item rounded-3 px-2 py-1 my-1" href="contact.html">Contact</a></li>
-                                    <li><a class="dropdown-item rounded-3 px-2 py-1 my-1" href="faq.html">FAQ</a></li>
-                                    <li><a class="dropdown-item rounded-3 px-2 py-1 my-1" href="404.mustache">404 Error</a></li>
-                                    <li><a class="dropdown-item rounded-3 px-2 py-1 my-1" href="edit-profile.html">Edit Profile</a></li>
-                                </ul>
-                            </li>
-                            <li class="nav-item">
-                                <a href="tags.html" class="nav-link"><span class="material-icons me-3">local_fire_department</span> <span>Trending</span></a>
+                                <a href="/trending" class="nav-link"><span class="material-icons me-3">local_fire_department</span> <span>Trending</span></a>
                             </li>
                         </ul>
                     </div>
-                    <a href="/user/signup" class="btn btn-primary w-100 text-decoration-none rounded-4 py-3 fw-bold text-uppercase m-0">Sign Up +</a>
-                    <div></div>
-                    <a href="/user/login" class="btn btn-primary w-100 text-decoration-none rounded-4 py-3 fw-bold text-uppercase m-0">Sign In ++</a>
+                    <a href="/user/signup" id="signup-menu" class="btn btn-primary w-100 text-decoration-none rounded-4 py-3 fw-bold text-uppercase m-0">Sign Up +</a>
+                    <div style="height: 20px"></div>
+                    <a href="/user/login" id="login-menu" class="btn btn-primary w-100 text-decoration-none rounded-4 py-3 fw-bold text-uppercase m-0">Sign In ++</a>
                 </div>
             </aside>
             <aside class="col col-xl-3 order-xl-3 col-lg-6 order-lg-3 col-md-6 col-sm-6 col-12">
@@ -761,7 +729,6 @@
 <script src="/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 <!-- Custom Js -->
 <script src="/js/custom.js"></script>
-<script src="/js/user.js"></script>
 <script src="/js/index.js"></script>
 <!-- Slick Js -->
 <script src="/vendor/slick/slick/slick.min.js"></script>
