Feat : "이미지 모달창 수정"
기존에 슬라이더 안됬던 문제랑 이미지가 확대되어서 나타나는 문제 해결

Fixes: #15

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -318,7 +318,7 @@ body {
 }
 .image-slider img {
     width: 489px;
-    height: 600px;
+    /*height: 600px;*/
     object-fit: cover;
 }
 .slick-prev:before, .slick-next:before {
