Feat : "댓글 창에서 댓글 작성 기능 추가"
Fixes: #15

--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -685,10 +685,13 @@
                                 <div class="d-flex align-items-center">
                                     <span class="material-icons bg-white border-0 text-primary pe-2 md-36">account_circle</span>
                                     <div class="d-flex align-items-center border rounded-4 px-3 py-1 w-100">
-                                        <input type="text"
+                                        <input id="commentContent" type="text"
                                                class="form-control form-control-sm p-0 rounded-3 fw-light border-0"
                                                placeholder="Write Your comment">
-                                        <a href="#" class="bg-white border-0 text-primary ps-2 text-decoration-none">Post</a>
+                                        <a id="commentUploadButton" data-bs-dismiss="modal" href="#" class="btn btn-primary rounded-5 fw-bold px-3 py-2 fs-6 mb-0 d-flex align-items-center">
+                                            <span class="material-icons me-2 md-16">send</span>
+                                            Post
+                                        </a>
                                     </div>
                                 </div>
                             </div>
