--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -35,7 +35,7 @@
     <div class="container">
         <div class="row position-relative">
             <!-- Main Content -->
-            <main class="col col-xl-6 order-xl-2 col-lg-12 order-lg-1 col-md-12 col-sm-12 col-12">
+            <main id="mainPost" class="col col-xl-6 order-xl-2 col-lg-12 order-lg-1 col-md-12 col-sm-12 col-12">
                 <div class="main-content">
                     <ul class="top-osahan-nav-tab nav nav-pills justify-content-center nav-justified mb-4 shadow-sm rounded-4 overflow-hidden bg-white sticky-sidebar2" id="pills-tab" role="tablist">
                         <li class="nav-item" role="presentation">
@@ -705,6 +705,8 @@
     </div>
 </div>
 
+<input type="hidden" id="page" current-page="1">
+
 <!-- Jquery Js -->
 <script src="/vendor/jquery/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"></script>
@@ -715,5 +717,95 @@
 <script src="/js/index.js"></script>
 <!-- Slick Js -->
 <script src="/vendor/slick/slick/slick.min.js"></script>
+
+<!-- Pagenation -->
+<script type="text/javascript">
+    let isRequestPost = false;
+    window.addEventListener('scroll',() => {
+        // $("#mainPost").height() : DOM의 길이
+        // $("#mainPost").offset().top : DOM의 최상단 위치
+        //window.pageYOffset : 현제 스크롤 최상단 위치
+        //window.innerHeight : 창 길이
+        const domPositionY = $("#mainPost").height() + $("#mainPost").offset().top;
+        const windowPositionY = window.pageYOffset + window.innerHeight;
+        if(domPositionY <= windowPositionY && !this.isRequestPost) {
+            this.isRequestPost = true;
+            setTimeout(() => this.isRequestPost = false, 1000);
+            var nextPage = parseInt($("#page").attr("current-page")) + 1;
+            console.log("현재 페이지 : ", $("#page").attr("current-page"))
+            console.log("다음 페이지 : ", nextPage);
+
+            $.ajax({
+                method: "GET",
+                url: "/post",
+                data: {"page": nextPage}
+            })
+            .done(function(response){
+                let postImageList;
+                for (var post of response) {
+                    postImageList = post.postImageList;
+                    $(".pt-4").append(
+                        "<div class=\"bg-white p-3 feed-item rounded-4 mb-3 shadow-sm\">" +
+                        "<div class=\"d-flex\">" +
+                        "<input type=\"hidden\" id=\"postId\" value=\"" + post.id + "\">" +
+                        "<img id=\"userProfileUrl\" src=\"" + post.user.imageUrl + "\"class=\"img-fluid rounded-circle user-img\" alt=\"profile-img\">" +
+                        "<div class=\"d-flex ms-3 align-items-start w-100\">" +
+                        "<div class=\"w-100\">" +
+                        "<div class=\"d-flex align-items-center justify-content-between\">" +
+                        "<a href=\"profile.html\" class=\"text-decoration-none d-flex align-items-center\">" +
+                        "<h6 id=\"userName\" class=\"fw-bold mb-0 text-body\">" + post.user.name + "</h6>" +
+                        "<span class=\"ms-2 material-icons bg-primary p-0 md-16 fw-bold text-white rounded-circle ov-icon\">done</span>" +
+                        "<small id=\"userNickname\"class=\"text-muted ms-2\">@" + post.user.nickname + "</small>" +
+                        "</a>" +
+                        "<div class=\"d-flex align-items-center small\">" +
+                        "<p class=\"text-muted mb-0\">" + post.createdAt + "</p>" +
+                        "<div class=\"dropdown\">" +
+                        "<a href=\"#\" class=\"text-muted text-decoration-none material-icons ms-2 md-20 rounded-circle bg-light p-1\" id=\"dropdownMenuButton1\" data-bs-toggle=\"dropdown\" aria-expanded=\"false\">more_vert</a>" +
+                        "<ul class=\"dropdown-menu fs-13 dropdown-menu-end\" aria-labelledby=\"dropdownMenuButton1\">" +
+                        "<li><a class=\"dropdown-item text-muted\" href=\"#\"><span class=\"material-icons md-13 me-1\">edit</span>Edit</a></li>" +
+                        "<li><a class=\"dropdown-item text-muted\" href=\"#\"><span class=\"material-icons md-13 me-1\">delete</span>Delete</a></li>" +
+                        "<li><a class=\"dropdown-item text-muted\" href=\"#\"><span class=\"material-icons md-13 me-1 ltsp-n5\">arrow_back_ios arrow_forward_ios</span>Embed Vogel</a></li>" +
+                        "<li><a class=\"dropdown-item text-muted d-flex align-items-center\" href=\"#\"><span class=\"material-icons md-13 me-1\">share</span>Share via another apps</a></li>" +
+                        "</ul>" +
+                        "</div>" +
+                        "</div>" +
+                        "</div>" +
+                        "<div class=\"my-2\">" +
+                        "<p class=\"text-dark\">" + post.content + "</p>" +
+                        "<div id=\"postImages\" href=\"#\" class=\"text-decoration-none\" data-bs-toggle=\"modal\" data-bs-target=\"#imageModal\">" +
+                        "</div>" +
+                        "<div class=\"d-flex align-items-center justify-content-between mb-2\">" +
+                        "<div>" +
+                        "<span class=\"text-muted text-decoration-none d-flex align-items-start fw-light\">" +
+                        "<span class=\"material-icons md-20 me-2\">thumb_up_off_alt</span>" +
+                        "<span id=\"postLikeNum\">" + post.likeNum + "</span>" +
+                        "</span>" +
+                        "</div>" +
+                        "<div>" +
+                        "<span data-bs-toggle=\"modal\" data-bs-target=\"#commentModal\" id=\"commentButton\" class=\"text-muted text-decoration-none d-flex align-items-start fw-light\"><span class=\"material-icons md-20 me-2\">chat_bubble_outline</span><span>" + post.commentNum + "</span></span>" +
+                        "</div>" +
+                        "<div>" +
+                        "<span class=\"text-muted text-decoration-none d-flex align-items-start fw-light\">" +
+                        "<span class=\"material-icons md-20 me-2\">repeat</span>" +
+                        "<span id=\"postShareNum\">" + post.shareNum + "</span>" +
+                        "</span>" +
+                        "</div>" +
+                        "<div>" +
+                        "<span class=\"text-muted text-decoration-none d-flex align-items-start fw-light\"><span class=\"material-icons md-18 me-2\">share</span><span>Share</span></span>" +
+                        "</div></div></div></div></div></div></div>"
+                    )
+                }
+            });
+
+            // for(var image of postImageList){
+            //     console.log(image)
+            //     $("#postImages").append(
+            //             "<img id=\"image\" src=\"" + image + "\" class=\"img-fluid rounded mb-3\" alt=\"post-img\">"
+            //     )
+            // }
+            $("#page").attr("current-page", nextPage);
+        }
+    });
+</script>
 </body>
 </html>
