Feat : "태그 입력 기능 추가"
Fixes: #15

--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -583,6 +583,12 @@
                         <label for="floatingTextarea2" class="h6 text-muted mb-0">What's on your mind...</label>
                     </div>
                 </div>
+                <div>
+                    <input style="float:left; width:133px; margin-right:25px;" class="form-control rounded-5" id="tag1" type="text" placeholder="#1"/>
+                    <input style="float:left; width:133px; margin-right:25px;" class="form-control rounded-5" id="tag2" type="text" placeholder="#2"/>
+                    <input style="float:left; width:133px;" class="form-control rounded-5" id="tag3" type="text" placeholder="#3"/>
+                </div>
+                <div style="clear: both; margin-bottom: 20px"></div>
                 <div class="modal-footer justify-content-start px-1 py-1 bg-white shadow-sm rounded-5">
                     <div class="rounded-4 m-0 px-3 py-2 d-flex align-items-center justify-content-between w-75">
                             <input id="postImageRegister" multiple type="file" id="chooseFile" name="chooseFile" accept="image/*">
