Fix : "게시물 작성자 이름 불러오기 오류 해결"
게시물 작성자가 자꾸 "노현승"으로 나와서 해결함
User.name 과 user.name은 다름

Fixes: #15

--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -100,7 +100,7 @@
                                                 <div class="w-100">
                                                     <div class="d-flex align-items-center justify-content-between">
                                                         <a href="profile.html" class="text-decoration-none d-flex align-items-center">
-                                                            <h6 id="userName" class="fw-bold mb-0 text-body">{{user.name}}</h6>
+                                                            <h6 id="userName" class="fw-bold mb-0 text-body">{{User.name}}</h6>
                                                             <span class="ms-2 material-icons bg-primary p-0 md-16 fw-bold text-white rounded-circle ov-icon">done</span>
                                                             <small id="userNickname"class="text-muted ms-2">@{{user.nickname}}</small>
                                                         </a>
