Feat: "게시물에 대한 좋아요 기능 연동"
Fixes: #15

--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -124,7 +124,7 @@
                                                             {{/postImageList}}
                                                         </div>
                                                         <div class="d-flex align-items-center justify-content-between mb-2">
-                                                            <div>
+                                                            <div id="likeButton">
                                                                 <span class="text-muted text-decoration-none d-flex align-items-start fw-light">
                                                                     <span class="material-icons md-20 me-2">thumb_up_off_alt</span>
                                                                     <span id="postLikeNum">{{likeNum}}</span>
