--- a/src/main/resources/templates/search.mustache
+++ b/src/main/resources/templates/search.mustache
@@ -335,48 +335,22 @@
                         <div class="tab-pane fade" id="pills-people" role="tabpanel" aria-labelledby="pills-people-tab">
                             <h6 class="mb-3 fw-bold text-body">People you can follow</h6>
                             <div class="bg-white rounded-4 overflow-hidden mb-4 shadow-sm">
-                                <!-- Account Item -->
-                                <a href="profile.html" class="p-3 border-bottom d-flex text-dark text-decoration-none account-item pf-item">
-                                    <img src="img/rmate5.jpg" class="img-fluid rounded-circle me-3" alt="profile-img">
-                                    <div>
-                                        <p class="fw-bold mb-0 pe-3 d-flex align-items-center">Webartinfo <span class="ms-2 material-icons bg-primary p-0 md-16 fw-bold text-white rounded-circle ov-icon">done</span></p>
-                                        <div class="text-muted fw-light">
-                                            <p class="mb-1 small">@abcdsec</p>
-                                            <span class="text-muted d-flex align-items-center small"><span class="material-icons me-1 small">open_in_new</span>Promoted</span>
-                                        </div>
-                                    </div>
-                                    <div class="ms-auto">
-                                        <span class="btn btn-outline-primary btn-sm px-3 rounded-pill">+ Follow</span>
-                                    </div>
-                                </a>
+                                {{#users}}
                                 <!-- Account Item -->
                                 <a href="profile.html" class="p-3 border-bottom d-flex text-dark text-decoration-none account-item pf-item">
                                     <img src="img/rmate4.jpg" class="img-fluid rounded-circle me-3" alt="profile-img">
                                     <div>
-                                        <p class="fw-bold mb-0 pe-3 d-flex align-items-center">John Smith <span class="ms-2 material-icons bg-primary p-0 md-16 fw-bold text-white rounded-circle ov-icon">done</span></p>
+                                        <p class="fw-bold mb-0 pe-3 d-flex align-items-center">{{name}}<span class="ms-2 material-icons bg-primary p-0 md-16 fw-bold text-white rounded-circle ov-icon">done</span></p>
                                         <div>
-                                            <p class="fw-light text-muted mb-1 small">@johnsmith</p>
-                                            <span class="d-flex align-items-center small">Designer</span>
+                                            <p class="fw-light text-muted mb-1 small">@{{account}}</p>
+                                            <span class="d-flex align-items-center small">{{profession}}</span>
                                         </div>
                                     </div>
                                     <div class="ms-auto">
                                         <span class="btn btn-outline-primary btn-sm px-3 rounded-pill">+ Follow</span>
                                     </div>
                                 </a>
-                                <!-- Account Item -->
-                                <a href="profile.html" class="p-3 d-flex text-dark text-decoration-none account-item pf-item">
-                                    <img src="img/rmate3.jpg" class="img-fluid rounded-circle me-3" alt="profile-img">
-                                    <div>
-                                        <p class="fw-bold mb-0 pe-3 d-flex align-items-center">Konex <span class="ms-2 material-icons bg-primary p-0 md-16 fw-bold text-white rounded-circle ov-icon">done</span></p>
-                                        <div>
-                                            <p class="text-muted fw-light mb-1 small">@Konex</p>
-                                            <span class="d-flex align-items-center small">Artist/Author/Motivational Speaker</span>
-                                        </div>
-                                    </div>
-                                    <div class="ms-auto">
-                                        <span class="btn btn-outline-primary btn-sm px-3 rounded-pill">+ Follow</span>
-                                    </div>
-                                </a>
+                                {{/users}}
                             </div>
                             <h6 class="mb-3 fw-bold text-body">Popular</h6>
                             <div class="bg-white rounded-4 overflow-hidden mb-4 shadow-sm">
