피드백 반영

--- a/src/main/resources/templates/search.mustache
+++ b/src/main/resources/templates/search.mustache
@@ -342,7 +342,7 @@
                                     <div>
                                         <p class="fw-bold mb-0 pe-3 d-flex align-items-center">{{name}}<span class="ms-2 material-icons bg-primary p-0 md-16 fw-bold text-white rounded-circle ov-icon">done</span></p>
                                         <div>
-                                            <p class="fw-light text-muted mb-1 small">@{{account}}</p>
+                                            <p class="fw-light text-muted mb-1 small">@{{nickname}}</p>
                                             <span class="d-flex align-items-center small">{{profession}}</span>
                                         </div>
                                     </div>
