Feat: "좋아요 기능 추가"
Fixes: #15

--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -79,8 +79,9 @@
                                                 </div>
                                                 <p class="fw-bold text-dark m-0">{{name}}</p>
                                                 <div class="btn-group" role="group" aria-label="Basic checkbox toggle button group">
+                                                    <input type ="hidden" id="userId" value="{{id}}">
                                                     <input type="checkbox" class="btn-check" id="btncheck{{id}}" checked>
-                                                    <label class="btn btn-outline-primary btn-sm px-3 rounded-pill" for="btncheck{{id}}"><span class="follow">+ Follow</span><span class="following d-none">Following</span></label>
+                                                    <label id="followButton" class="btn btn-outline-primary btn-sm px-3 rounded-pill" for="btncheck{{id}}"><span class="follow">+ Follow</span><span class="following d-none">Following</span></label>
                                                 </div>
                                             </div>
                                         </div>
