Fix : "인덱스 페이지 수정"
세션 아이디 보유 여부에 따라 불러오는 게시글 및 팔로우 추천대상 변경

Fixes: #15

--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -731,11 +731,9 @@
         let result="<div id=\"postImages\" class=\"text-decoration-none\" data-bs-toggle=\"modal\" data-bs-target=\"#imageModal\">";
         for(var i=0; i<imageList.length; i++){
             var tmp = "<img id=\"image\" src=\"" + imageList[i] + "\" class=\"img-fluid rounded mb-3\" alt=\"post-img\">"
-            console.log("tmp", tmp)
             result += tmp
         }
-        result += "<div>";
-        console.log("result : ", result)
+        result += "</div>";
         return result
     }
     let isRequestPost = false;
