Feat : "프로필 정보 제공 페이지 추가"
Fixes: #15

--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -67,7 +67,7 @@
                                         <div class="me-2 bg-white shadow-sm rounded-4 p-3 user-list-item d-flex justify-content-center my-2">
                                             <div class="text-center">
                                                 <div class="position-relative d-flex justify-content-center">
-                                                    <a href="profile.html" class="text-decoration-none">
+                                                    <a href="/profile/{{id}}" class="text-decoration-none">
                                                         <img src="{{imageUrl}}" class="img-fluid rounded-circle mb-3" alt="profile-img">
                                                         <div class="position-absolute">
                                                             <span class="material-icons bg-primary small p-1 fw-bold text-white rounded-circle">done</span>
@@ -155,7 +155,7 @@
                             <div class="bg-white rounded-4 overflow-hidden mb-4 shadow-sm">
                                 <!-- Account Item -->
                                 {{#popularUsers}}
-                                <a href="profile/{{id}}" class="p-3 border-bottom d-flex text-dark text-decoration-none account-item pf-item">
+                                <a href="/profile/{{id}}" class="p-3 border-bottom d-flex text-dark text-decoration-none account-item pf-item">
                                     <img src="{{imageUrl}}" class="img-fluid rounded-circle me-3" alt="profile-img">
                                     <div>
                                         <p class="fw-bold mb-0 pe-3 d-flex align-items-center">{{name}} <span class="ms-2 material-icons bg-primary p-0 md-16 fw-bold text-white rounded-circle ov-icon">done</span></p>
@@ -229,13 +229,13 @@
                                 <a href="/" class="nav-link active"><span class="material-icons me-3">house</span> <span>Feed</span></a>
                             </li>
                             <li class="nav-item">
-                                <a href="profile" class="nav-link" id="profile-menu"><span class="material-icons me-3">account_circle</span> <span>Profile</span></a>
+                                <a href="/profile" class="nav-link" id="profile-menu"><span class="material-icons me-3">account_circle</span> <span>Profile</span></a>
                             </li>
                             <li class="nav-item">
                                 <a href="/trending" class="nav-link"><span class="material-icons me-3">local_fire_department</span> <span>Trending</span></a>
                             </li>
                             <li class="nav-item" id="change-profile-menu">
-                                <a href="/user/profile" class="nav-link"><span class="material-icons me-3">face</span> <span>Change Profile</span></a>
+                                <a href="/user/profile" id="user-profile-menu" class="nav-link"><span class="material-icons me-3">face</span> <span>Change Profile</span></a>
                             </li>
                             <li class="nav-item">
                                 <a href="/" class="nav-link" id="logout-menu"><span class="material-icons me-3">logout</span> <span>Logout</span></a>
