Feat : "유저 프로필 조회시 자신이 작성한 글 조회"
Fixes: #15

--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -96,7 +96,7 @@
                                             <div class="d-flex ms-3 align-items-start w-100">
                                                 <div class="w-100">
                                                     <div class="d-flex align-items-center justify-content-between">
-                                                        <a href="profile.html" class="text-decoration-none d-flex align-items-center">
+                                                        <a href="/profile/{{user.id}}" class="text-decoration-none d-flex align-items-center">
                                                             <h6 id="userName" class="fw-bold mb-0 text-body">{{User.name}}</h6>
                                                             <span class="ms-2 material-icons bg-primary p-0 md-16 fw-bold text-white rounded-circle ov-icon">done</span>
                                                             <small id="userNickname"class="text-muted ms-2">@{{user.nickname}}</small>
@@ -606,7 +606,7 @@
                         "<div class=\"d-flex ms-3 align-items-start w-100\">" +
                         "<div class=\"w-100\">" +
                         "<div class=\"d-flex align-items-center justify-content-between\">" +
-                        "<a href=\"profile.html\" class=\"text-decoration-none d-flex align-items-center\">" +
+                        "<a href=\"/profile/"+ post.user.id +"\" class=\"text-decoration-none d-flex align-items-center\">" +
                         "<h6 id=\"userName\" class=\"fw-bold mb-0 text-body\">" + post.user.name + "</h6>" +
                         "<span class=\"ms-2 material-icons bg-primary p-0 md-16 fw-bold text-white rounded-circle ov-icon\">done</span>" +
                         "<small id=\"userNickname\"class=\"text-muted ms-2\">@" + post.user.nickname + "</small>" +
