--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -450,8 +450,10 @@
                         <!-- Search Tab -->
                         <div class="sticky-sidebar2 mb-3">
                             <div class="input-group mb-4 shadow-sm rounded-4 overflow-hidden py-2 bg-white">
-                                <span class="input-group-text material-icons border-0 bg-white text-primary">search</span>
-                                <input type="text" class="form-control border-0 fw-light ps-1" placeholder="Search Vogel">
+                                <form name="search-form" autocomplete="off" action="/search">
+                                    <span class="input-group-text material-icons border-0 bg-white text-primary" input type="button">search</span>
+                                    <input type="text" class="form-control border-0 fw-light ps-1" placeholder="Search Vogel" name="keyword">
+                                </form>
                             </div>
                             <div class="bg-white rounded-4 overflow-hidden shadow-sm mb-4">
                                 <h6 class="fw-bold text-body p-3 mb-0 border-bottom">What's happening</h6>
