--- a/src/main/resources/templates/search.mustache
+++ b/src/main/resources/templates/search.mustache
@@ -9,14 +9,14 @@
     <meta name="description" content="Vogel - Social Network & Community HTML Template" />
     <meta name="keywords" content="bootstrap5, e-learning, forum, games, online course, Social Community, social events, social feed, social media, social media template, social network html, social sharing, twitter" />
     <!-- Bootstrap CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <!-- Slich Slider -->
-    <link href="vendor/slick/slick/slick.css" rel="stylesheet">
-    <link href="vendor/slick/slick/slick-theme.css" rel="stylesheet">
+    <link href="/vendor/slick/slick/slick.css" rel="stylesheet">
+    <link href="/vendor/slick/slick/slick-theme.css" rel="stylesheet">
     <!-- Icofont -->
-    <link href="vendor/icofont/icofont.min.css" rel="stylesheet">
+    <link href="/vendor/icofont/icofont.min.css" rel="stylesheet">
     <!-- Font Icons -->
-    <link href="vendor/icons/css/materialdesignicons.min.css" rel="stylesheet" type="text/css">
+    <link href="/vendor/icons/css/materialdesignicons.min.css" rel="stylesheet" type="text/css">
     <!-- Custom Css -->
     <link href="css/style.css" rel="stylesheet">
     <!-- Material Icons -->
@@ -832,8 +832,10 @@
                         <!-- Search Tab -->
                         <div class="sticky-sidebar2 mb-3">
                             <div class="input-group mb-4 shadow-sm rounded-4 overflow-hidden py-2 bg-white">
-                                <span class="input-group-text material-icons border-0 bg-white text-primary">search</span>
-                                <input type="text" class="form-control border-0 fw-light ps-1" placeholder="Search Vogel">
+                                <form name="search-form" autocomplete="off" action="/search">
+                                <span class="input-group-text material-icons border-0 bg-white text-primary" input type="button">search</span>
+                                <input type="text" class="form-control border-0 fw-light ps-1" placeholder="Search Vogel" name="keyword">
+                                </form>
                             </div>
                             <div class="bg-white rounded-4 overflow-hidden shadow-sm mb-4">
                                 <h6 class="fw-bold text-body p-3 mb-0 border-bottom">What's happening</h6>
