Feat: "공유 기능 연동"
Fixes: #15

--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -131,7 +131,7 @@
                                                             <div>
                                                                 <span data-bs-toggle="modal" data-bs-target="#commentModal" id="commentButton" class="text-muted text-decoration-none d-flex align-items-start fw-light"><span class="material-icons md-20 me-2">chat_bubble_outline</span><span>{{commentNum}}</span></span>
                                                             </div>
-                                                            <div>
+                                                            <div id="shareButton">
                                                                 <span class="text-muted text-decoration-none d-flex align-items-start fw-light">
                                                                     <span class="material-icons md-20 me-2">repeat</span>
                                                                     <span id="postShareNum">{{shareNum}}</span>
