--- a/src/main/resources/templates/search.mustache
+++ b/src/main/resources/templates/search.mustache
@@ -498,6 +498,7 @@
                             <!-- tags -->
                             <div class="feeds">
                                 {{#tags}}
+                                <div class="bg-white rounded-4 overflow-hidden shadow-sm mb-4 mb-lg-0">
                                     <a href="/trending" class="p-3 border-bottom d-flex align-items-center text-dark text-decoration-none">
                                         <div>
                                             <!--                                        <div class="text-muted fw-light d-flex align-items-center">-->
@@ -508,6 +509,7 @@
                                             <span class="text-primary">{{#content}}#{{content}}{{/content}} {{^content}}{{/content}}</span>
                                         </div>
                                     </a>
+                                </div>
                                 {{/tags}}
                             </div>
                         </div>
