--- a/src/main/resources/templates/trending.mustache
+++ b/src/main/resources/templates/trending.mustache
@@ -24,7 +24,7 @@
 </head>
 <body class="bg-light">
 <div class="web-none d-flex align-items-center px-3 pt-3">
-    <a href="/index.html" class="text-decoration-none">
+    <a href="/" class="text-decoration-none">
         <img src="/img/logo.png" class="img-fluid logo-mobile" alt="brand-logo">
     </a>
     <button class="ms-auto btn btn-primary ln-0" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample" aria-controls="offcanvasExample">
@@ -168,13 +168,13 @@
                 <div class="p-2 bg-light offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample">
                     <div class="sidebar-nav mb-3">
                         <div class="pb-4">
-                            <a href="/index.html" class="text-decoration-none">
+                            <a href="/" class="text-decoration-none">
                                 <img src="/img/logo.png" class="img-fluid logo" alt="brand-logo">
                             </a>
                         </div>
                         <ul class="navbar-nav justify-content-end flex-grow-1">
                             <li class="nav-item">
-                                <a href="/index.html" class="nav-link active"><span class="material-icons me-3">house</span> <span>Feed</span></a>
+                                <a href="/" class="nav-link active"><span class="material-icons me-3">house</span> <span>Feed</span></a>
                             </li>
                             <li class="nav-item">
                                 <a href="/profile.html" class="nav-link"><span class="material-icons me-3">account_circle</span> <span>Profile</span></a>
@@ -186,7 +186,7 @@
                                 <a href="/#" class="nav-link" data-bs-toggle="modal" data-bs-target="#languageModal"><span class="material-icons me-3">translate</span> <span>Language</span></a>
                             </li>
                             <li class="nav-item">
-                                <a href="/index.html" class="nav-link" id="logout-button"> <span class="material-icons me-3">logout</span> <span>Logout</span></a>
+                                <a href="/" class="nav-link" id="logout-button"> <span class="material-icons me-3">logout</span> <span>Logout</span></a>
                             </li>
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="/#" id="offcanvasNavbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -210,7 +210,7 @@
                 <div class="ps-0 m-none fix-sidebar">
                     <div class="sidebar-nav mb-3">
                         <div class="pb-4 mb-4">
-                            <a href="/index.html" class="text-decoration-none">
+                            <a href="/" class="text-decoration-none">
                                 <img src="/img/logo.png" class="img-fluid logo" alt="brand-logo">
                             </a>
                         </div>
@@ -219,7 +219,7 @@
                                 <a href="/" class="nav-link"><span class="material-icons me-3">house</span> <span>Feed</span></a>
                             </li>
                             <li class="nav-item" id="profile-menu">
-                                <a href="/user/profile" class="nav-link"><span class="material-icons me-3">account_circle</span> <span>Profile</span></a>
+                                <a class="nav-link" id="profile-menu"><span class="material-icons me-3">account_circle</span> <span>Profile</span></a>
                             </li>
                             <li class="nav-item">
                                 <a href="/trending" class="nav-link active"><span class="material-icons me-3">local_fire_department</span> <span>Trending</span></a>
